force-app/main/default/objects/CECInstallers__x/CECInstallers__x.object-meta.xml
<CustomObject>
    <description>CECInstallers</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>CECInstallers</externalName>
    <label>CECInstallers</label>
    <pluralLabel>CECInstallers</pluralLabel>
</CustomObject>