force-app/main/default/objects/CECInstallers__x/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <description>AccountName</description>
    <externalDeveloperName>AccountName</externalDeveloperName>
    <label>AccountName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>