force-app/main/default/objects/CECInstallers__x/fields/EAIDateCreated__c.field-meta.xml
<CustomField>
    <fullName>EAIDateCreated__c</fullName>
    <description>EAIDateCreated</description>
    <externalDeveloperName>EAIDateCreated</externalDeveloperName>
    <label>EAIDateCreated</label>
    <length>128</length>
    <type>Text</type>
</CustomField>