force-app/main/default/objects/CECInstallers__x/fields/EAIDateModified__c.field-meta.xml
<CustomField>
    <fullName>EAIDateModified__c</fullName>
    <description>EAIDateModified</description>
    <externalDeveloperName>EAIDateModified</externalDeveloperName>
    <label>EAIDateModified</label>
    <length>128</length>
    <type>Text</type>
</CustomField>