force-app/main/default/objects/CECInstallers__x/fields/EAIDateRefreshed__c.field-meta.xml
<CustomField>
    <fullName>EAIDateRefreshed__c</fullName>
    <description>EAIDateRefreshed</description>
    <externalDeveloperName>EAIDateRefreshed</externalDeveloperName>
    <label>EAIDateRefreshed</label>
    <length>128</length>
    <type>Text</type>
</CustomField>