force-app/main/default/objects/CECInstallers__x/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email</description>
    <externalDeveloperName>Email</externalDeveloperName>
    <label>Email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>