force-app/main/default/objects/CECInstallers__x/fields/Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Endorsements__c</fullName>
    <description>Endorsements</description>
    <externalDeveloperName>Endorsements</externalDeveloperName>
    <label>Endorsements</label>
    <length>128</length>
    <type>Text</type>
</CustomField>