force-app/main/default/objects/CECInstallers__x/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Fax</description>
    <externalDeveloperName>Fax</externalDeveloperName>
    <label>Fax</label>
    <length>128</length>
    <type>Text</type>
</CustomField>