force-app/main/default/objects/CECInstallers__x/fields/GridType__c.field-meta.xml
<CustomField>
    <fullName>GridType__c</fullName>
    <description>GridType</description>
    <externalDeveloperName>GridType</externalDeveloperName>
    <label>GridType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>