force-app/main/default/objects/CECInstallers__x/fields/LicensedElectricianNumber__c.field-meta.xml
<CustomField>
    <fullName>LicensedElectricianNumber__c</fullName>
    <description>LicensedElectricianNumber</description>
    <externalDeveloperName>LicensedElectricianNumber</externalDeveloperName>
    <label>LicensedElectricianNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>