force-app/main/default/objects/CECInstallers__x/fields/MailingAddressStreetName__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressStreetName__c</fullName>
    <description>MailingAddressStreetName</description>
    <externalDeveloperName>MailingAddressStreetName</externalDeveloperName>
    <label>MailingAddressStreetName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>