force-app/main/default/objects/CECInstallers__x/fields/MailingAddressStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressStreetNumber__c</fullName>
    <description>MailingAddressStreetNumber</description>
    <externalDeveloperName>MailingAddressStreetNumber</externalDeveloperName>
    <label>MailingAddressStreetNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>