force-app/main/default/objects/CECInstallers__x/fields/MailingAddressStreetType__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressStreetType__c</fullName>
    <description>MailingAddressStreetType</description>
    <externalDeveloperName>MailingAddressStreetType</externalDeveloperName>
    <label>MailingAddressStreetType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>