force-app/main/default/objects/CECInstallers__x/fields/MailingAddressUnitNumber__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressUnitNumber__c</fullName>
    <description>MailingAddressUnitNumber</description>
    <externalDeveloperName>MailingAddressUnitNumber</externalDeveloperName>
    <label>MailingAddressUnitNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>