force-app/main/default/objects/CECInstallers__x/fields/MailingAddressUnitType__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressUnitType__c</fullName>
    <description>MailingAddressUnitType</description>
    <externalDeveloperName>MailingAddressUnitType</externalDeveloperName>
    <label>MailingAddressUnitType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>