force-app/main/default/objects/CECInstallers__x/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <description>MailingCity</description>
    <externalDeveloperName>MailingCity</externalDeveloperName>
    <label>MailingCity</label>
    <length>128</length>
    <type>Text</type>
</CustomField>