force-app/main/default/objects/CECInstallers__x/fields/MailingStateProvince__c.field-meta.xml
<CustomField>
    <fullName>MailingStateProvince__c</fullName>
    <description>MailingStateProvince</description>
    <externalDeveloperName>MailingStateProvince</externalDeveloperName>
    <label>MailingStateProvince</label>
    <length>128</length>
    <type>Text</type>
</CustomField>