force-app/main/default/objects/CECInstallers__x/fields/MailingZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MailingZipPostalCode__c</fullName>
    <description>MailingZipPostalCode</description>
    <externalDeveloperName>MailingZipPostalCode</externalDeveloperName>
    <label>MailingZipPostalCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>