force-app/main/default/objects/CECInstallers__x/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Mobile</description>
    <externalDeveloperName>Mobile</externalDeveloperName>
    <label>Mobile</label>
    <length>128</length>
    <type>Text</type>
</CustomField>