force-app/main/default/objects/CECInstallers__x/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone</description>
    <externalDeveloperName>Phone</externalDeveloperName>
    <label>Phone</label>
    <length>128</length>
    <type>Text</type>
</CustomField>