force-app/main/default/objects/CECInstallers__x/fields/SolarAccreditationNumber__c.field-meta.xml
<CustomField>
    <fullName>SolarAccreditationNumber__c</fullName>
    <description>SolarAccreditationNumber</description>
    <externalDeveloperName>SolarAccreditationNumber</externalDeveloperName>
    <label>SolarAccreditationNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>