force-app/main/default/objects/CECInstallers__x/fields/SolarInstallerExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>SolarInstallerExpiryDate__c</fullName>
    <description>SolarInstallerExpiryDate</description>
    <externalDeveloperName>SolarInstallerExpiryDate</externalDeveloperName>
    <label>SolarInstallerExpiryDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>