force-app/main/default/objects/CECInstallers__x/fields/SolarInstallerFullAwardDate__c.field-meta.xml
<CustomField>
    <fullName>SolarInstallerFullAwardDate__c</fullName>
    <description>SolarInstallerFullAwardDate</description>
    <externalDeveloperName>SolarInstallerFullAwardDate</externalDeveloperName>
    <label>SolarInstallerFullAwardDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>