force-app/main/default/objects/CECInstallers__x/fields/SolarInstallerProvisionalAwardDate__c.field-meta.xml
<CustomField>
    <fullName>SolarInstallerProvisionalAwardDate__c</fullName>
    <description>SolarInstallerProvisionalAwardDate</description>
    <externalDeveloperName>SolarInstallerProvisionalAwardDate</externalDeveloperName>
    <label>SolarInstallerProvisionalAwardDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>