force-app/main/default/objects/CECInstallers__x/fields/SolarInstallerStatus__c.field-meta.xml
<CustomField>
    <fullName>SolarInstallerStatus__c</fullName>
    <description>SolarInstallerStatus</description>
    <externalDeveloperName>SolarInstallerStatus</externalDeveloperName>
    <label>SolarInstallerStatus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>