force-app/main/default/objects/CECInstallers__x/fields/SPS__c.field-meta.xml
<CustomField>
    <fullName>SPS__c</fullName>
    <description>SPS</description>
    <externalDeveloperName>SPS</externalDeveloperName>
    <label>SPS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>