force-app/main/default/objects/CECInstallers__x/fields/SuspensionEndDate__c.field-meta.xml
<CustomField>
    <fullName>SuspensionEndDate__c</fullName>
    <description>SuspensionEndDate</description>
    <externalDeveloperName>SuspensionEndDate</externalDeveloperName>
    <label>SuspensionEndDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>