force-app/main/default/objects/CECInstallers__x/fields/SuspensionStartDate__c.field-meta.xml
<CustomField>
    <fullName>SuspensionStartDate__c</fullName>
    <description>SuspensionStartDate</description>
    <externalDeveloperName>SuspensionStartDate</externalDeveloperName>
    <label>SuspensionStartDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>